@@ -1,3 +1,8 @@
+2007-12-18  David Bateman  <dbateman@free.fr>
+
+	* build_sparse_tests.sh: Add tests for indexing like a([1,1],:),
+	a(:,[1,1]) and sparse(42)([1,1]).
+
 2007-12-11  David Bateman  <dbateman@free.fr>
 
 	* build_sparse_tests.sh: Drop argument to Fsparse to force mutation.
